[tool.poetry]
name = "msolspray"
version = "1.0.0"
description = "A password spraying tool for Microsoft Online accounts (Azure/O365)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
